feat: правки по тестированию